# dwarf-p-ice3

./: .coverage  .gitignore  .gitmodules  404.html  CMakeLists.txt  DACE_CONVERSION_SUMMARY.md  README.md  build_docs.sh  index.html  install.sh  mkdocs.yml  namelists.md  objects.inv  pyproject.toml  pytest.ini  requirement.txt  requirements.txt  requirements_all.txt  setup.cfg  setup_cython.py  tests.sh  unit-tests-ice-adjust.html  unit-tests-rain-ice.html  unit-tests.html
.devcontainer/: devcontainer.json  tasks.json
.devcontainer/scripts/: post-create.sh
.github/workflows/: benchmarks-fork-upload.yml  ci.yml  containers.yml  deploy_pages  hpc-build.yml  publish.yml  python-app.yml
PHYEX-IAL_CY50T1/bridge/: _phyex_wrapper.pyx  _phyex_wrapper_acc.pyx  phyex_bridge.F90  phyex_bridge_acc.F90
agent/ICE4_TENDENCIES_STATUS/: index.html
agent/RAIN_ICE_TRANSLATION_PLAN/: index.html
agent/README_cloud_fraction/: index.html
agent/README_condensation/: index.html
agent/README_ice_adjust_modular/: index.html
agent/STENCIL_DOCSTRING_TEMPLATE/: index.html
agent/TRANSLATION_SUMMARY/: index.html
agent/test_ice4_fast_rg_FIXES/: index.html
agent/test_ice4_fast_rs_FIXES/: index.html
agent/test_sigrc_computation_FIXES/: index.html
cmake/: phyex_stencils.cmake
config/lumi/: lumi_env  requirements.txt
container/: Dockerfile
docs/: dwarf_ice3_gt4py.md  index.md  microphysique.md  translation_options.md
docs/agent/: turbulence_jax_translation.md
docs/drivers/: compare.md  config.md
docs/ice3/functions/: compute_ice_frac.md  condensation_src_1d.md  erf.md  interp_micro.md  sedimentation_flux.md  subgrid_mf.md  temperature.md  tiwmx.md  upwind_sedimentation.md
docs/ice3/initialisation/: state.md  state_rain_ice.md  utils.md
docs/ice3/phyex_common/: constants.md  nebn.md  phyex.md  rain_ice_descr.md  xker_sdryg.md
docs/ice3/stencils/: aro_filter.md  fog_deposition.md  ice4_correct_negativities.md  ice4_fast_rg.md  ice4_fast_ri.md  ice4_fast_rs.md  ice4_nucleation.md  ice4_rimltc.md  ice4_slow.md  ice4_stepping.md  ice4_tendencies.md  ice4_warm.md  (+8 more)
drivers/cli/: index.html
drivers/compare/: index.html
drivers/config/: index.html
drivers/core/: index.html
examples/: compare_fortran_gt4py.py  ctypes_ice_adjust_example.py  cython_benchmark.py  cython_standalone_demo.py  example_ice_adjust_jax.py  fortran_binding_example.py  run_ice3.ipynb  test_ice_adjust_cython.py
microphysique/: index.html
namelists/: index.html
sandbox/: test_cloud_fraction.py  test_ice4_rrhong.py  test_stencil.py
source/: conf.py  index.rst
src/convection/: README.md  __init__.py  condens.py  convpar_shal.py  mixing_funct.py  satmixratio.py  trigger_shal.py  updraft_shal.py
src/drivers/: CMakeLists.txt  cli.py  compare.py  core.py
src/pyphyex/: create_test_data.py  ice_adjust_wrapper.py  physical_parameters.py
src/testprogs_data/: check_data.py  decode.md  generate_data.py  ice_adjust.yaml  main.py  rain_ice.yaml  shallow.yml
testprogs_data/main/: index.html
testprogs_data/utils/: index.html
tests/: README.md  allocate_random_fields.py  conftest.py  main.py
tests/compare/: differences.py  ref_vs_run.py
tests/components/: build_aro_adjust.py  component.py  test_aro_adjust.py  test_aro_filter.py  test_component.py  test_component_to_sdfg.py  test_dummy_component.py  test_ice4_tendencies.py  test_ice_adjust.py  test_ice_adjust_fmodpy.py  test_ice_adjust_fmodpy_full.py  test_ice_adjust_jax.py  test_ice_adjust_modular.py  test_rain_ice.py  test_rain_ice_fmodpy.py  test_rain_ice_fortran.py  test_shallow_convection_fortran.py  test_turbulence_jax.py  utils.py
tests/dace/: test_sigrc_computation_dace.py
tests/drivers/: test_components.py  test_core.py
tests/functions/: test_sign.py
tests/integration/: README.md  test_gt4py_to_cupy.py  test_gt4py_to_jax.py
tests/performance/: README.md  test_ice_adjust.py  test_ice_adjust_fortran.py  test_ice_adjust_fortran_acc.py  test_ice_adjust_jax.py  test_rain_ice_fortran.py  test_rain_ice_fortran_acc.py  test_rain_ice_jax.py
tests/phyex_common/: test_nml2config.py  test_phyex.py
tests/repro/: aro_adjust_filter.py  cloud_fraction.py  condensation.py  conftest.py  env.py  fortran_stencil.py  generic_test_component.py  ice4_rrhong.py  latent_heat.py  run_ice_adjust_test.py  run_rain_ice_test.py  run_test_test.py  run_tests_ice_adjust.py  run_tests_rain_ice.py  test_aro_adjust_filter.py  test_cloud_fraction.py  test_cloud_fraction_repro.py  test_cloud_fraction_split.py  test_condensation.py  test_config.py  test_ice4_fast_processes.py  test_ice4_fast_rg.py  test_ice4_fast_rg_dace.py  test_ice4_fast_rg_split.py  test_ice4_fast_ri.py  test_ice4_fast_rs.py  test_ice4_nucleation.py  test_ice4_processes.py  test_ice4_rimltc.py  test_ice4_rrhong.py  test_ice4_slow.py  test_ice4_stepping.py  test_ice4_tendencies.py  test_ice4_warm.py  test_ice_adjust.py  test_latent_heat.py  test_nucleation.py  test_rain_ice.py  test_rainfr_vert.py  test_sedimentation.py  (+4 more)
tests/repro_dace/: test_ice4_fast_rg.py  test_ice4_fast_rs.py  test_sigrc_computation.py
tests/stencils/: default_config.py  fields_allocation.py  generic_component.py  generic_test_component.py  run_tests.py  run_tests_ice_adjust.py  run_tests_rain_ice.py  test_aro_adjust_filter.py  test_cloud_fraction.py  test_compile_rain_ice_stencils.py  test_compile_stencils.py  test_condensation.py  test_ice4_fast_rg_kernels.py  test_ice4_fast_rs_kernels.py  test_ice4_rrhong.py  test_ice_adjust.py  test_ice_adjust_cloud_fraction.py  test_ice_adjust_condensation.py  test_interp_micro_1d.py  test_interp_micro_2d.py  test_latent_heat.py  test_lookup_table.py  test_sigrc_computation.py
tests/utils/: allocate_state.py  array_dict_operations.py  fields_allocation.py  generic_test_component.py  initialize_fields.py  state.py  state_ice4_stepping.py  state_ice4_tendencies.py  state_ice_adjust.py  test_reader.py  test_stencil.py  test_temporary_context.py  test_util.py
transforms/: ice_adjust.config  ice_adjust_stencils.config  shallow_convection.config
translation_options/: index.html
(+540 files in other folders)
