[project]
name = "dwarf-p-ice3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy<2.0",
    "xarray>=2025.4.0",
    "ifs-physics-common",
    "typer>=0.15.2",
]

[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools>=65.5.0', 'wheel']

[project.scripts]
testprogs-data = "testprogs_data.main:app"
standalone-model = "drivers.cli:app"

[dependency-groups]
dev = [
    "fprettify>=0.3.7",
    "isort>=6.0.1",
    "ruff>=0.11.11",
]
gpu = [
    "cupy==14.0.0a1",
    "cupy-xarray>=0.1.4",
]
tests = [
    "fmodpy>=1.7.4",
    "pytest>=8.3.5",
    "pytest-benchmark>=5.1.0",
]

[tool.uv.sources]
ifs-physics-common = { git = "https://github.com/maurinl26/ifs-physics-common.git" }
