[project]
name = "dwarf-p-ice3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gt4py>=1.0.7",
    "numpy<2.0",
    "scipy>=1.15.3",
    "typer>=0.15.2",
    "xarray[io]>=2025.4.0",
]

[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools>=65.5.0', 'wheel']

[project.scripts]
testprogs-data = "testprogs_data.main:app"
standalone-model = "drivers.cli:app"

[project.optional-dependencies]
dev = [
    "fprettify>=0.3.7",
    "isort>=6.0.1",
    "ruff>=0.11.11",
]
gpu = [
    "cupy>=13.5.0",
    "cupy-xarray>=0.1.4",
]
test = [
    "pytest>=8.3.5",
    "fmodpy>=1.7.4",
    "pytest-benchmark>=5.1.0",
    "coverage>=7.12.0",
]
doc = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings>=0.30.1",
    "mkdocstrings-python>=1.19.0",
]

[tools.pytest.ini_options]
pythonpath = "src"
markers = [
    "debug: run on debug debug backend",
    "numpy: run on numpy backend",
    "cpu: run on dace:cpu backend",
    "gpu: run on dace:gpu backend"
]

[[tool.uv.index]]
name = "ice3"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.uv.sources]
dace = { git = "https://github.com/GridTools/dace.git", rev = "romanc/stree-to-sdfg" }

[dependency-groups]
dace = [
    "dace",
]
dev = [
    "ruff>=0.11.11",
]
test = [
    "coverage-badge>=1.1.2",
    "fmodpy>=1.7.4",
    "pytest-benchmark>=5.1.0",
    "pytest-cov>=7.0.0",
]
