[metadata]
name = dwarf-p-ice3
description = GT4Py-based implementation of the ICE3 dwarf
author = Météo-France
author_email = loic.maurin@meteo.fr
license = Apache-2.0
license_file = ../../LICENSE
;long_description = file: ../../README.md
;long_description_content_type = text/markdown
project_urls =
    Source = https://github.com/maurinl26/dwarf-p-ice3
platforms = Linux, Mac
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience:: Science / Research
    License :: OSI Approved:: Apache License, Version 2.0
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Atmospheric Science

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >= 3.7
package_dir =
    =src
install_requires =
    click
    gt4py[dace] @ git+https://github.com/GridTools/gt4py.git@master#egg=gt4py
    # gt4py[dace] @ git+https://github.com/GridTools/gt4py.git@6b269bdf4bdc9e6e6c896b03c43f73c6342eb443 in PMAPL-dycore
    h5py
    numpy
    pandas
    pydantic
    sympl @ git+https://github.com/stubbiali/sympl.git@oop#egg=sympl
    xarray



# As PMAPL-dycore
[project.optional-dependencies]
development = ['black>=22.6.0', 'flake8', 'ipdb', 'ipython', 'mypy', 'pre-commit']
distributed = [
    #'ghex @ git+https://github.com/stubbiali/GHEX.git@py_bindings_debug#egg=ghex&subdirectory=bindings/python',
        'ghex @ git+https://github.com/stubbiali/GHEX.git@refactor-python-bindings-fix#egg=ghex&subdirectory=bindings/python',
    'netCDF4 @ git+https://github.com/stubbiali/netcdf4-python.git@fvm#egg=netCDF4'
]
gpu = [
    # required to compile CuPy from source
    'cython==0.29.36',
    'cupy'
]
gpu-cuda11x = ['cupy-cuda11x']
gpu-cuda12x = ['cupy-cuda12x']
gpu-rocm = [
    # required to compile CuPy from source
    'cython==0.29.36',
    'cupy==12.3.0',
    # required until ROCm/HIP support is not included in a release of GT4Py
    #'gt4py[dace] @ git+https://github.com/GridTools/gt4py.git@054e4e6a3416e9b704da41574e7e0ea7913b8006'
        'gt4py[dace] @ git+https://github.com/GridTools/gt4py.git@6b269bdf4bdc9e6e6c896b03c43f73c6342eb443'
]
testing = ['numba==0.56.0', 'pytest>=7.0']




[options.packages.find]
where = src
exclude =
    data
    scripts
    tests



;[tool:pytest]
;testpaths = tests

;[build_sphinx]
;source-dir = docs/source
;build-dir = docs/build
;builder = html latexpdf

[flake8]
exclude =
    .eggs
    .git
max-line-length = 100
